--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- TODO: Can you change the nav bar color from purple to green? -->
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -23,6 +24,7 @@
                 <h2>About Me</h2>
                 <div class="content">
                     <div class="text">
+                        <!-- TODO: Can you change the text here to talk about yourself? -->
                         <p>Hello! I'm a passionate individual who loves exploring new things and connecting with people. I believe in living life to the fullest and always finding joy in the little moments.</p>
                         <p>I enjoy learning new skills, whether it's picking up a musical instrument, trying out a new recipe, or diving into a fascinating book. My curiosity drives me to constantly seek out new experiences and challenges.</p>
                         <p>When I'm not busy with my daily activities, you'll often find me outdoors, appreciating nature, or spending quality time with friends and family who mean the world to me.</p>
@@ -40,6 +42,7 @@
                 <div class="content">
                     <div class="text">
                         <h3>Photography</h3>
+                        <!-- TODO: Can you bold the word "magical"? -->
                         <p>I love capturing beautiful moments and landscapes. There's something magical about freezing a perfect moment in time and being able to revisit it whenever I want.</p>
                         
                         <h3>Reading</h3>
@@ -72,6 +75,7 @@
                         </ul>
                     </div>
                     <div class="image-placeholder">
+                        <!-- TODO: Can you add an image here by changing css? -->
                         <div class="placeholder-img">Fun Moments</div>
                     </div>
                 </div>
