--- a/index.html
+++ b/index.html
@@ -1,90 +1,348 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <!-- TODO: Can you change the nav bar color from purple to green? -->
-        <nav>
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#hobbies">My Hobbies</a></li>
-                <li><a href="#funfacts">Fun Facts</a></li>
-            </ul>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            http-equiv="Cache-Control"
+            content="no-cache, no-store, must-revalidate"
+        />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
+        <title>My Personal Website</title>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
 
-    <main>
-        <section id="about" class="section">
-            <div class="container">
-                <h2>About Me</h2>
-                <div class="content">
-                    <div class="text">
-                        <!-- TODO: Can you change the text here to talk about yourself? -->
-                        <p>Hello! I'm a passionate individual who loves exploring new things and connecting with people. I believe in living life to the fullest and always finding joy in the little moments.</p>
-                        <p>I enjoy learning new skills, whether it's picking up a musical instrument, trying out a new recipe, or diving into a fascinating book. My curiosity drives me to constantly seek out new experiences and challenges.</p>
-                        <p>When I'm not busy with my daily activities, you'll often find me outdoors, appreciating nature, or spending quality time with friends and family who mean the world to me.</p>
-                    </div>
-                    <div class="image-placeholder">
-                        <div class="placeholder-img">Your Photo Here</div>
+            body {
+                font-family: 'Arial', sans-serif;
+                line-height: 1.6;
+                color: #333;
+                background-color: #f8f9fa;
+            }
+
+            header {
+            /* TODO: Can you change the color to your favorite color? */
+                background: black;
+                color: white;
+                padding: 1rem 0;
+                position: fixed;
+                width: 100%;
+                top: 0;
+                z-index: 1000;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            }
+
+            nav ul {
+                list-style: none;
+                display: flex;
+                justify-content: center;
+                gap: 2rem;
+            }
+
+            nav a {
+                color: white;
+                text-decoration: none;
+                font-weight: 500;
+                transition: opacity 0.3s ease;
+                padding: 0.5rem 1rem;
+                border-radius: 5px;
+            }
+
+            nav a:hover {
+                background-color: rgba(255, 255, 255, 0.2);
+            }
+
+            main {
+                margin-top: 80px;
+            }
+
+            .section {
+                padding: 4rem 0;
+                min-height: 100vh;
+                display: flex;
+                align-items: center;
+            }
+
+            .section:nth-child(even) {
+                background-color: #ffffff;
+            }
+
+            .section:nth-child(odd) {
+                background-color: #f8f9fa;
+            }
+
+            .container {
+                max-width: 1200px;
+                margin: 0 auto;
+                padding: 0 2rem;
+                width: 100%;
+            }
+
+            h2 {
+                font-size: 2.5rem;
+                margin-bottom: 2rem;
+                text-align: center;
+                color: #2c3e50;
+                position: relative;
+            }
+
+            h2::after {
+                content: '';
+                display: block;
+                width: 50px;
+                height: 3px;
+                background: #ffff00 margin: 0.5rem auto;
+                border-radius: 2px;
+            }
+
+            .content {
+                display: grid;
+                grid-template-columns: 2fr 1fr;
+                gap: 3rem;
+                align-items: center;
+            }
+
+            .text {
+                font-size: 1.1rem;
+                line-height: 1.8;
+            }
+
+            .text p {
+                margin-bottom: 1.5rem;
+                color: #555;
+            }
+
+            .text h3 {
+                color: #2c3e50;
+                margin-bottom: 1rem;
+                margin-top: 2rem;
+                font-size: 1.4rem;
+            }
+
+            .text h3:first-child {
+                margin-top: 0;
+            }
+
+            .image-placeholder {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .placeholder-img {
+                width: 300px;
+                height: 300px;
+                background: linear-gradient(135deg, #e3e3e3 0%, #f0f0f0 100%);
+                border: 2px dashed #ccc;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 1.1rem;
+                color: #666;
+                border-radius: 10px;
+                transition: all 0.3s ease;
+            }
+
+            .placeholder-img:hover {
+                background: linear-gradient(135deg, #d0d0d0 0%, #e0e0e0 100%);
+                border-color: #999;
+            }
+
+            .fun-facts-list {
+                list-style: none;
+                padding: 0;
+            }
+
+            .fun-facts-list li {
+                padding: 1rem;
+                margin-bottom: 1rem;
+                background: white;
+                border-radius: 8px;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                font-size: 1.1rem;
+                transition: transform 0.3s ease, box-shadow 0.3s ease;
+            }
+
+            .fun-facts-list li:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+            }
+
+            footer {
+                background-color: #2c3e50;
+                color: white;
+                text-align: center;
+                padding: 2rem 0;
+                margin-top: 2rem;
+            }
+
+            /* Responsive Design */
+            @media (max-width: 768px) {
+                .content {
+                    grid-template-columns: 1fr;
+                    gap: 2rem;
+                }
+
+                .placeholder-img {
+                    width: 250px;
+                    height: 250px;
+                }
+
+                h2 {
+                    font-size: 2rem;
+                }
+
+                nav ul {
+                    flex-direction: column;
+                    gap: 1rem;
+                }
+
+                .section {
+                    padding: 2rem 0;
+                    min-height: auto;
+                }
+
+                main {
+                    margin-top: 120px;
+                }
+            }
+
+            html {
+                scroll-behavior: smooth;
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#hobbies">My Hobbies</a></li>
+                    <li><a href="#funfacts">Fun Facts</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="about" class="section">
+                <div class="container">
+                    <h2>About Me</h2>
+                    <div class="content">
+                        <div class="text">
+                            <!-- TODO: Can you change the text here to talk about yourself? -->
+                            <p>
+                                Hello! I'm a passionate individual who loves
+                                exploring new things and connecting with people.
+                                I believe in living life to the fullest and
+                                always finding joy in the little moments.
+                            </p>
+                            <p>
+                                I enjoy learning new skills, whether it's
+                                picking up a musical instrument, trying out a
+                                new recipe, or diving into a fascinating book.
+                                My curiosity drives me to constantly seek out
+                                new experiences and challenges.
+                            </p>
+                            <p>
+                                When I'm not busy with my daily activities,
+                                you'll often find me outdoors, appreciating
+                                nature, or spending quality time with friends
+                                and family who mean the world to me.
+                            </p>
+                        </div>
+                        <div class="image-placeholder">
+                            <div class="placeholder-img">Your Photo Here</div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <section id="hobbies" class="section">
-            <div class="container">
-                <h2>My Hobbies</h2>
-                <div class="content">
-                    <div class="text">
-                        <h3>Photography</h3>
-                        <!-- TODO: Can you bold the word "magical"? -->
-                        <p>I love capturing beautiful moments and landscapes. There's something magical about freezing a perfect moment in time and being able to revisit it whenever I want.</p>
-                        
-                        <h3>Reading</h3>
-                        <p>Books are my escape to different worlds. I enjoy everything from mystery novels to science fiction, and I'm always eager to discover new authors and genres.</p>
-                        
-                        <h3>Cooking</h3>
-                        <p>Experimenting in the kitchen is one of my favorite ways to unwind. I love trying out new recipes from different cuisines and sharing delicious meals with loved ones.</p>
-                    </div>
-                    <div class="image-placeholder">
-                        <div class="placeholder-img">Hobby Photos</div>
+            <section id="hobbies" class="section">
+                <div class="container">
+                    <h2>My Hobbies</h2>
+                    <div class="content">
+                        <div class="text">
+                            <h3>Photography</h3>
+                            <!-- TODO: Can you bold the word "magical"? -->
+                            <p>
+                                I love capturing beautiful moments and
+                                landscapes. There's something magical about
+                                freezing a perfect moment in time and being able
+                                to revisit it whenever I want.
+                            </p>
+
+                            <h3>Reading</h3>
+                            <p>
+                                Books are my escape to different worlds. I enjoy
+                                everything from mystery novels to science
+                                fiction, and I'm always eager to discover new
+                                authors and genres.
+                            </p>
+
+                            <h3>Cooking</h3>
+                            <p>
+                                Experimenting in the kitchen is one of my
+                                favorite ways to unwind. I love trying out new
+                                recipes from different cuisines and sharing
+                                delicious meals with loved ones.
+                            </p>
+                        </div>
+                        <div class="image-placeholder">
+                            <div class="placeholder-img">Hobby Photos</div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <section id="funfacts" class="section">
-            <div class="container">
-                <h2>Fun Facts About Me</h2>
-                <div class="content">
-                    <div class="text">
-                        <ul class="fun-facts-list">
-                            <li>🌟 I can solve a Rubik's cube in under 2 minutes</li>
-                            <li>🎵 I once performed in front of an audience of 500 people</li>
-                            <li>🌍 I've visited 12 different countries and counting</li>
-                            <li>🍕 I can eat pizza for breakfast, lunch, and dinner without getting tired of it</li>
-                            <li>📚 I read at least one book every month</li>
-                            <li>🎨 I taught myself to paint during the pandemic</li>
-                            <li>🐕 I'm a proud owner of two rescue dogs</li>
-                            <li>⭐ I collect vintage postcards from around the world</li>
-                        </ul>
-                    </div>
-                    <div class="image-placeholder">
-                        <!-- TODO: Can you add an image here by changing css? -->
-                        <div class="placeholder-img">Fun Moments</div>
+            <section id="funfacts" class="section">
+                <div class="container">
+                    <h2>Fun Facts About Me</h2>
+                    <div class="content">
+                        <div class="text">
+                            <ul class="fun-facts-list">
+                                <li>
+                                    🌟 I can solve a Rubik's cube in under 2
+                                    minutes
+                                </li>
+                                <li>
+                                    🎵 I once performed in front of an audience
+                                    of 500 people
+                                </li>
+                                <li>
+                                    🌍 I've visited 12 different countries and
+                                    counting
+                                </li>
+                                <li>
+                                    🍕 I can eat pizza for breakfast, lunch, and
+                                    dinner without getting tired of it
+                                </li>
+                                <li>📚 I read at least one book every month</li>
+                                <li>
+                                    🎨 I taught myself to paint during the
+                                    pandemic
+                                </li>
+                                <li>🐕 I'm a proud owner of two rescue dogs</li>
+                                <li>
+                                    ⭐ I collect vintage postcards from around
+                                    the world
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="image-placeholder">
+                            <!-- TODO: Can you add an image here by changing css? -->
+                            <div class="placeholder-img">Fun Moments</div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
 
-    <footer>
-        <p>&copy; 2025 My Personal Website. Made with ❤️</p>
-    </footer>
-</body>
+        <footer>
+            <p>&copy; 2025 My Personal Website. Made with ❤️</p>
+        </footer>
+    </body>
 </html>
